some more changes

--- a/src/sass/base/_common.sass
+++ b/src/sass/base/_common.sass
@@ -1,5 +1,8 @@
-@import "bootstrap-compass"
+@import "compass/css3"
+@import "variables"
 @import "bootstrap-variables"
+
+// @import "bootstrap-compass"
 
 // Core variables and mixins
 @import "bootstrap/variables"
@@ -51,3 +54,6 @@
 // Utility classes
 @import "bootstrap/utilities"
 @import "bootstrap/responsive-utilities"
+
+
+@import "base"
