--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,1 +1,8 @@
-@import "base"
+@import "base/common"
+
+@import "project/header"
+@import "project/options"
+@import "project/demo"
+@import "project/results"
+@import "project/form"
+@import "project/footer"
